@@ -1,61 +1,97 @@
-# 🧮 JavaFX Calculator App
+# 📝 JavaFX To-Do List App
 
-![JavaFX](https://img.shields.io/badge/JavaFX-GUI-blue) ![Status](https://img.shields.io/badge/Status-Completed-brightgreen) ![License](https://img.shields.io/badge/License-MIT-lightgrey)
+![JavaFX](https://img.shields.io/badge/JavaFX-GUI-blue) ![Status](https://img.shields.io/badge/Project-Complete-brightgreen) ![License](https://img.shields.io/badge/License-MIT-lightgrey)
 
-> A sleek, interactive calculator built using JavaFX.  
-> Handles basic arithmetic operations with a clean UI and responsive design.
+> A sleek and simple To-Do List desktop application built using JavaFX.  
+> Manage your tasks efficiently with a smooth and interactive user interface.
 
 ---
 
 ## 🚀 Features
 
-- ➕ Addition  
-- ➖ Subtraction  
-- ✖️ Multiplication  
-- ➗ Division (with zero-division handling)  
-- 🔄 Clear (`C`)  
-- ✅ Result (`=`) with immediate output  
-- 📱 Responsive button grid and large display
-
----
-
-## 🎯 Tech Stack
-
-| Technology | Purpose |
-|------------|---------|
-| Java       | Core programming language |
-| JavaFX     | GUI design and controls |
+- ➕ Add tasks instantly
+- 🗑️ Delete selected tasks
+- 📋 Dynamic task list view
+- 💡 Clean and responsive layout
+- ⚡ Lightweight and fast desktop app
 
 ---
 
 ## 📸 Screenshot
 
-> Here's what the app looks like during use:
+> Add an image named `todo_screenshot.png` in the same directory as this README.
 
-![JavaFX Calculator Screenshot](./calculator_screenshot.png)
-
----
-
-## 🧠 Logic Overview
-
-- User input is handled using a `TextField`.
-- Buttons are dynamically created using a string array for layout clarity.
-- On operator input, the app stores the first number and waits for the second.
-- On pressing `=`, the calculation is performed using a `switch` statement.
-- Handles division-by-zero errors gracefully by displaying `"Error"`.
+![To-Do List Screenshot](./todo_screenshot.png)
 
 ---
 
-## 🛠 How to Run
+## 🎯 Technologies Used
+
+| Technology      | Role                     |
+|-----------------|--------------------------|
+| Java            | Core programming language |
+| JavaFX          | GUI development framework |
+| ObservableList  | Real-time list updates    |
+| ListView        | Task visualization        |
+
+---
+
+## 🛠️ How to Run
 
 ### 📥 Prerequisites
 
-- Java 11 or above
-- JavaFX SDK installed and configured
+- Java JDK 11 or higher
+- JavaFX SDK ([Download from OpenJFX](https://openjfx.io))
 
 ### ▶️ Run Instructions
 
-1. Clone or download this project.
-2. Make sure JavaFX SDK is added to your module path.
-3. Use the following VM arguments when running:
+1. Download the project files.
+2. Configure JavaFX SDK in your IDE (Eclipse/IntelliJ/VSCode).
+3. Add the following VM options when running:
+
+--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+
+4. Run the `TodoListApp.java` file.
+
+---
+
+## 🔍 How It Works
+
+- Input from a `TextField`
+- Tasks stored in `ObservableList`
+- Displayed in a `ListView`
+- Button actions handle adding/removing items from the list
+
+---
+
+## 📁 Project Structure
+
+TodoListApp/
+├── TodoListApp.java
+├── README.md
+└── todo_screenshot.png
+
+
+---
+
+## 📌 Potential Enhancements
+
+- ✅ Save/load tasks from a file
+- 🔔 Add reminders or alarms
+- 🌙 Dark mode/theme toggle
+- ☑️ Task completion checkboxes
+- 📤 Export tasks to file
+
+---
+
+## 👨‍💻 Developer
+
+**Chaithravardhan Reddy Chepati**  
+📧 [chepatichaithravardhanreddy@gmail.com](mailto:chepatichaithravardhanreddy@gmail.com)
+
+---
+
+## 🌟 Support
+
+If you like this project, give it a ⭐ and share it with others!
 
